mv common utils to rlkits

--- a/PPO/scratch.ipynb
+++ b/PPO/scratch.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "distinguished-script",
+   "id": "municipal-three",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dynamic-pride",
+   "id": "north-moses",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "welsh-roulette",
+   "id": "outer-backup",
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "overhead-guarantee",
+   "id": "increasing-award",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "suburban-mouth",
+   "id": "antique-implementation",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "opposed-breast",
+   "id": "robust-binding",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "closing-meaning",
+   "id": "religious-requirement",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "balanced-anchor",
+   "id": "pleasant-springer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "reserved-midwest",
+   "id": "driving-adventure",
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "central-result",
+   "id": "eligible-composite",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "continental-syndrome",
+   "id": "recent-thomson",
    "metadata": {},
    "outputs": [
     {
@@ -297,8 +297,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "increasing-representative",
-   "metadata": {},
+   "id": "familiar-woman",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -408,6 +413,33 @@
    ],
    "source": [
     "help(np.reshape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "productive-industry",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function entropy in module torch.distributions.categorical:\n",
+      "\n",
+      "entropy(self)\n",
+      "    Returns entropy of distribution, batched over batch_shape.\n",
+      "    \n",
+      "    Returns:\n",
+      "        Tensor of shape batch_shape.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from torch.distributions import Categorical\n",
+    "\n",
+    "help(Categorical.entropy)"
    ]
   }
  ],
