--- a/theory/PPO.tex
+++ b/theory/PPO.tex
@@ -12,16 +12,18 @@ results, the performance of PPO is just as good as TRPO.
 
 Two variants of PPO
 
-\textbf{PPO-Penalty} solves the KL-contrained update like TRPO. It 
-penalizes the KL-divergence in the objective instead of making it a 
-hard constraint. The penalty coefficiently is adjusted automatically 
-throughout the training. 
-
 \textbf{PPO-Clip} does not use KL-divergence to make the new policy 
 close to the old one. It clips the surrgate gain (it clips the 
 $\frac{\pi(a|s)}{\pi_{\text{old}}(a|s)}$ term to $(1 - \epsilon, 
 1 + \epsilon)$ range to make sure the policy update is not too big. 
 
+\textbf{PPO-Penalty} solves the KL-contrained update like TRPO. It 
+penalizes the KL-divergence in the objective instead of making it a 
+hard constraint. The penalty coefficiently is adjusted automatically 
+throughout the training. 
+
+
+\section{PPO-Clip}
 PPO-Clip updates policies via
 \[
 \theta_{k+1} = \argmax_{\theta}\E_{s, a\sim \pi_{\theta_k}}
@@ -81,6 +83,78 @@ typically via Stochastic ascend with Adam
 typically via some gradient descent algorithm. 
 \ENDFOR
 \end{algorithmic}
+
+\section{PPO-Penalty}
+Another approach to do policy iteration and regulate the risk of breaking
+the policy is to treat the KL divergence (with the old policy) as a 
+penalty in the loss objective. In supervised deep learning, we can the
+analogous idea of prevent the network from overfitting the data by L2 
+weight decay. 
+
+The objective we want to maximize is 
+
+\[
+L^{KLPEN}(\theta) = \E_{t}[
+\frac{\thetapi(a_t|s_t)}{\oldpi(a_t | s_t)}\hat A_t
+- \beta \KL[\oldpi(\cdot | s_t), \thetapi(\cdot|s_t)]
+]
+\]
+
+$\beta$ is an \emph{adaptive} parameter determined by the 
+\[
+d = \E_t[\KL[\oldpi(\cdot | s_t), \thetapi(\cdot | s_t)]]
+\]
+
+- If $d < d_{targ}/1.5$, $\beta \leftarrow \beta/2$
+
+- If $d > d_{targ}/1.5$, $\beta \leftarrow \beta * 2$
+
+
+
+\begin{algorithm}[H]
+\caption{PPO-KL}
+\label{alg2}
+\end{algorithm}
+
+\begin{algorithmic}[2]
+\STATE Input: initial policy $\theta_0$, initial value function $\phi_0$,
+a KL penalty coefficient $\beta$, a trust region size $d_{targ}$
+\FOR{$k=0,1,\cdots,$}
+\STATE Collect a set of trajectories $D_k = \{\tau_i\}$ by running policy
+$\pi_k$ in the env
+\STATE Compute rewards-to-go $\hat R_t$ ($G$)
+\STATE Compute advantage estimate $\hat A_t$ based on the current
+value function $\phi_k$
+\STATE Determine the KL penalty coefficient by
+\[
+d = \E_t[\KL[\oldpi(\cdot | s_t), \thetapi(\cdot | s_t)]]
+\]
+
+\IF {$d < d_{targ} / 1.5$}
+    \STATE $\beta \leftarrow  \beta / 2$
+\ELSIF {$d > d_{targ} * 1.5$}
+    \STATE $\beta \leftarrow \beta *2 $
+\ENDIF
+
+\STATE Update the policy by maximizing the PPO-KL objective
+\[
+L^{KLPEN}(\theta) = \E_{t}[
+\frac{\thetapi(a_t|s_t)}{\oldpi(a_t | s_t)}\hat A_t
+- \beta \KL[\oldpi(\cdot | s_t), \thetapi(\cdot|s_t)]
+]
+\]
+
+typically via Stochastic ascend with Adam
+
+\STATE Fit value function by regression on mean-squared error:
+\[
+\phi_{k+1} = \argmin_{\phi}\frac{1}{|D_k|T}
+\sum_{\tau \in D_k}\sum_{t=0}^T(V_{\phi}(s_t) - \hat R_t)^2
+\]
+typically via some gradient descent algorithm. 
+\ENDFOR
+\end{algorithmic}
+
 
 How to get this algorithm into code?
 
