--- a/theory/macro.sty
+++ b/theory/macro.sty
@@ -25,6 +25,9 @@ hyperref,%\autoref
 \newcommand{\oldpi}{\pi_{\theta_{\text{old}}}}
 \newcommand{\thetapi}{\pi_{\theta}}
 \newcommand{\KL}{\text{KL}}
+\newcommand{\D}{\mathscr{D}}
+\newcommand{\aprime}{a^{\prime}}
+\newcommand{\sprime}{s^{\prime}}
 
 \newtheorem{lemma}{Lemma}
 \newtheorem{proposition}{Proposition}
@@ -32,4 +35,6 @@ hyperref,%\autoref
 \newtheorem{corollary}{Corollary}
 \newtheorem{remark}{Remark}
 \newtheorem{example}{Example}
+
+\newcommand{\todo}[1]{{\color{blue} #1}}
 
