--- a/theory/intro.tex
+++ b/theory/intro.tex
@@ -56,6 +56,14 @@ $S_{t-1}, S_{t-2},\cdots$ do not matter)
 Env obeys this assumption is called a Markov Decision Process (MDP)
 \end{frame}
 
+\begin{frame}{Bellman Optimality Equation}
+How do you know your policy is optimal?
+You can recursively define 
+\begin{frame}{Value Iteration}
+"Do the best you can"
+Include algorithm
+\end{frame}
+
 
 
 
