--- a/theory/macro.sty
+++ b/theory/macro.sty
@@ -28,6 +28,7 @@ hyperref,%\autoref
 \newcommand{\D}{\mathscr{D}}
 \newcommand{\aprime}{a^{\prime}}
 \newcommand{\sprime}{s^{\prime}}
+\newcommand{\definedas}{:=}
 
 \newtheorem{lemma}{Lemma}
 \newtheorem{proposition}{Proposition}
