--- a/theory/macro.sty
+++ b/theory/macro.sty
@@ -36,6 +36,7 @@ hyperref,%\autoref
 \newtheorem{corollary}{Corollary}
 \newtheorem{remark}{Remark}
 \newtheorem{example}{Example}
+\newtheorem{proof}{Proof}
 
 \newcommand{\todo}[1]{{\color{blue} #1}}
 
