--- a/theory/policy_gradient_methods.tex
+++ b/theory/policy_gradient_methods.tex
@@ -171,7 +171,10 @@ This gives us a template for generalized policy iteration
 So this is what you do to overcome the garbage in and garbage out. 
 You can get a good policy by iterating one-step a time.
 
-\section{Value Iteration and Exact Methods}
+\section{Value Iteration with Dynamic Programming}
+How do we evaluate a policy $\pi$, i.e. 
+How do we compute $v_{\pi}(s_0)$,i.e. line 3 of the GPI? 
+
 
 \section{Function Approximation and Policy Gradient Methods}
 The above generalized policy iteration works pretty well if the underlying
